<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">Marble Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Marble Game</string>
    <string name="start_game">Start Game</string>
    <string name="grant_borthwick">Grant Borthwick</string>
    <string name="ben_kuestersteffen">Ben Kuestersteffen</string>
    <string name="cis_520_dr_neilson">CIS 520 - Dr. Neilson</string>
    <string name="project_3">Project 3</string>
    <string name="fall_2012">Fall 2012</string>
    <string name="automatic">Automatic</string>
    <string name="_15">15</string>
    <string name="_10">10</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="quit">Quit</string>
    <string name="balls">Balls</string>
    <string name="_1">1</string>
    <string name="ratio_of_boxes_to_traps">Ratio of Boxes to Traps</string>
    <string name="alarm_mode">Alarm Mode</string>
    <string name="_0_5714285">0.5714285</string>
    <string name="ball_size">Ball Size</string>
    <string name="_7_0">7.0</string>
    <string name="displayheight">DisplayHeight</string>
    <string name="wall_width">Wall Width</string>
    <string name="wall_height">Wall Height</string>

</resources>